# 054-nystromformer-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: .gitignore  __init__.py  data.py  example_usage.py  model.py  requirements.txt  strategy.py
rust/: .gitignore  Cargo.toml  README.md
rust/examples/: backtest.rs  fetch_data.rs  predict.rs  train.rs
rust/src/: lib.rs
rust/src/api/: client.rs  mod.rs  types.rs
rust/src/model/: attention.rs  config.rs  encoder.rs  mod.rs
rust/src/strategy/: backtest.rs  mod.rs  signals.rs
